Implement FFT calculation and add tidynamics
* Add test for importing tidynamics
* Make simple step trajectory with unit velocities (0, 1, 2, etc)
for testing

--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -10,11 +10,15 @@ dependencies:
   # MDAnalysis
   - MDAnalysis
 
+  # tidynamics
+  - tidynamics
+
   # Testing
   - pytest
   - pytest-cov
   - pytest-xdist
   - codecov
+  - MDAnalysisTests
 
   # Pip-only installs
   #- pip:
