--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "MDAnalysis>=2.0.0",
+    "tidynamics>=1.0.0",
 ]
 keywords = [
     "molecular simulations",
@@ -32,6 +33,7 @@ test = [
     "pytest>=6.0",
     "pytest-xdist>=2.5",
     "pytest-cov>=3.0",
+    "MDAnalysisTests>=2.0.0",
 ]
 doc = [
     "sphinx",
