--- a/.github/workflows/gh-ci.yaml
+++ b/.github/workflows/gh-ci.yaml
@@ -37,7 +37,7 @@ jobs:
         uses: MDAnalysis/mdanalysis-compatible-python@main
 
   main-tests:
-    if: "github.repository == 'MDAnalysis/transport_analysis'"
+    if: "github.repository == 'MDAnalysis/transport-analysis'"
     needs: environment-config
     runs-on: ${{ matrix.os }}
     strategy:
@@ -70,7 +70,7 @@ jobs:
         use-mamba: true
         channels: conda-forge, defaults
 
-        activate-environment: transport_analysis-test
+        activate-environment: transport-analysis-test
         auto-update-conda: true
         auto-activate-base: false
         show-channel-urls: true
@@ -101,10 +101,10 @@ jobs:
 
     - name: Run tests
       run: |
-        pytest -n 2 -v --cov=transport_analysis --cov-report=xml --color=yes transport_analysis/tests/
+        pytest -n 2 -v --cov=transport-analysis --cov-report=xml --color=yes transport-analysis/tests/
 
     - name: codecov
-      if: github.repository == 'MDAnalysis/transport_analysis' && github.event_name != 'schedule'
+      if: github.repository == 'MDAnalysis/transport-analysis' && github.event_name != 'schedule'
       uses: codecov/codecov-action@v3
       with:
         file: coverage.xml
@@ -113,7 +113,7 @@ jobs:
 
 
   pylint_check:
-    if: "github.repository == 'MDAnalysis/transport_analysis'"
+    if: "github.repository == 'MDAnalysis/transport-analysis'"
     needs: environment-config
     runs-on: ubuntu-latest
 
@@ -135,11 +135,25 @@ jobs:
       env:
         PYLINTRC: .pylintrc
       run: |
-        pylint transport_analysis
+        pylint transport-analysis
+
+
+  black_check:
+    if: "github.repository == 'MDAnalysis/transport-analysis'"
+    needs: environment-config
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - uses: psf/black@stable
+      with:
+      options: "--check --verbose"
+      src: "./src"
+      version: "~= 22.0"
 
 
   pypi_check:
-    if: "github.repository == 'MDAnalysis/transport_analysis'"
+    if: "github.repository == 'MDAnalysis/transport-analysis'"
     needs: environment-config
     runs-on: ubuntu-latest
 
@@ -161,7 +175,7 @@ jobs:
 
     - name: Check package build
       run: |
-        DISTRIBUTION=$(ls -t1 dist/transport_analysis-*.tar.gz | head -n 1)
-        test -n "${DISTRIBUTION}" || { echo "no distribution dist/transport_analysis-*.tar.gz found"; exit 1; }
+        DISTRIBUTION=$(ls -t1 dist/transport-analysis-*.tar.gz | head -n 1)
+        test -n "${DISTRIBUTION}" || { echo "no distribution dist/transport-analysis-*.tar.gz found"; exit 1; }
         echo "twine check $DISTRIBUTION"
         twine check $DISTRIBUTION
