--- a/.github/workflows/gh-ci.yaml
+++ b/.github/workflows/gh-ci.yaml
@@ -147,7 +147,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: psf/black@stable
       with:
-        options: "--check --verbose"
+        options: "--check --diff --line-length 79"
         src: "./transport_analysis"
         version: "~= 22.0"
 
