Remove analysis folder and update Codecov
* Move all analysis modules up a directory
* Update `codecov.yml`
* Update path for docs

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -14,4 +14,4 @@ comment:
   paths: null
 ignore:
   - "transport_analysis/_version.py"
-  - "transport_analysis/analysis/due.py"
+  - "transport_analysis/due.py"
